--- a/deleting.html
+++ b/deleting.html
@@ -6,6 +6,15 @@
     <title>delete_page</title>
 </head>
 <body>
-    
+    <form method="POST" action="/submit" enctype="multipart/form-data">
+        <label><h3>FOR NATIONAL ID</h3></label>
+        <input type="number" id="quantity" name="post_number" min="1" max="100" required><br><br>
+        <input type="text" name="password" placeholder="password" />
+
+        <ul class="actions">
+            <li><input type="submit" value="Send Message" /></li>
+            <li><input type="reset" value="Clear Form" class="alt" /></li>
+        </ul>
+    </form>
 </body>
 </html>
