--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
               <p>Am an aspiring selftaught software engineer. Hire me for voluntary service. Am here to contribute to your mega project.</p>
               <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
                 <li class="ftco-animate"><a ><span class="icon-twitter"></span></a></li>
-                <li class="ftco-animate"><a ><span class="icon-facebook"></span></a></li>
+                <li class="ftco-animate"><a href="posting.html"><span class="icon-facebook"></span></a></li>
                 <li class="ftco-animate"><a ><span class="icon-instagram"></span></a></li>
               </ul>
             </div>
