i have done some changes in the index.html

--- a/index.html
+++ b/index.html
@@ -138,8 +138,10 @@
 	                	<a class="mr-2">Admin</a>
 	                </p>
                 </div>
-                <h3 class="heading"><a >CELESTIAL</a></h3>
-                <p>The cow jumped over the moon, the little dog laughed, and the dish ran away with the spoon.</p>
+                <h3 class="heading"><a >MY BLOGS</a></h3>
+                <p>Github does not renders only static pages. This content had to be displayed from the postgresql database using python's flask in the back end 
+                  you can find this very project with a database uri for you to edit <a href="https://github.com/Kigozi-14/My_blog_site"> TAP HERE IN CASE YOURE INTERESTED</a>
+                </p>
               </div>
             </div>
           </div>
@@ -154,8 +156,10 @@
 	                	<a class="mr-2">Admin</a>
 	                </p>
                 </div>
-                <h3 class="heading"><a >CELESTIAL</a></h3>
-                <p>The cow jumped over the moon, the little dog laughed, and the dish ran away with the spoon.</p>
+                <h3 class="heading"><a >MY BLOGS</a></h3>
+                <p>Github does not renders only static pages. This content had to be displayed from the postgresql database using python's flask in the back end 
+                  you can find this very project with a database uri for you to edit <a href="https://github.com/Kigozi-14/My_blog_site"> TAP HERE IN CASE YOURE INTERESTED</a>
+                </p>
               </div>
             </div>
           </div>
@@ -170,8 +174,10 @@
 	                	<a class="mr-2">Admin</a>
 	                </p>
                 </div>
-                <h3 class="heading"><a >CELESTIAL</a></h3>
-                <p>The cow jumped over the moon, the little dog laughed, and the dish ran away with the spoon.</p>
+                <h3 class="heading"><a >MY BLOGS</a></h3>
+                <p>Github does not renders only static pages. This content had to be displayed from the postgresql database using python's flask in the back end 
+                  you can find this very project with a database uri for you to edit <a href="https://github.com/Kigozi-14/My_blog_site"> TAP HERE IN CASE YOURE INTERESTED</a>
+                </p>
               </div>
             </div>
           </div>
