i have done some changes in the index.html

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 	                </p>
                 </div>
                 <h3 class="heading"><a >MY BLOGS</a></h3>
-                <p>Github does not renders only static pages. This content had to be displayed from the postgresql database using python's flask in the back end 
+                <p>Github pages renders only static pages. This content had to be displayed from the postgresql database using python's flask in the back end 
                   you can find this very project with a database uri for you to edit <a href="https://github.com/Kigozi-14/My_blog_site"> TAP HERE IN CASE YOURE INTERESTED</a>
                 </p>
               </div>
